# Esmeralda

./: .env  .gitignore  .html  Cargo.toml  Dioxus.toml  README.md  SECURITY.md  a.csv  features.md  install_to_linux.sh  install_to_windows.iss  log.txt  lote.bat  makefile
.cargo/: config  config_example
.github/workflows/: rust.yml
doc/: README.md
doc/edit/: Conceitual_1.brM3  Conceitual_2.brM3  Esmeralda - Dados para IR.docx  Lógico_1.brM3  Lógico_2.brM3  class_diagram.xmi  cronograma.ods  devlopment model.drawio  use_case.xmi
docs/: requisitos.txt
docs/doc/: crates.js  help.html  settings.html  src-files.js
docs/doc/aho_corasick/: struct.PatternID.html  struct.Span.html
docs/doc/anyhow/: fn.Ok.html  index.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/doc/anymap2/: all.html  enum.Entry.html  index.html  struct.Map.html  struct.OccupiedEntry.html  struct.VacantEntry.html  type.AnyMap.html  type.SendSyncAnyMap.html
docs/doc/async_channel/: all.html  enum.TryRecvError.html  enum.TrySendError.html  fn.bounded.html  fn.unbounded.html  index.html  struct.Receiver.html  struct.Recv.html  struct.RecvError.html  struct.Send.html  struct.SendError.html  struct.Sender.html  struct.WeakReceiver.html  struct.WeakSender.html
docs/doc/async_io/: all.html  fn.block_on.html  index.html  struct.Async.html  struct.Readable.html  struct.ReadableOwned.html  struct.Timer.html  struct.Writable.html  struct.WritableOwned.html
docs/doc/async_lock/: index.html  struct.Barrier.html  struct.BarrierWaitResult.html  struct.Mutex.html  struct.MutexGuard.html  struct.MutexGuardArc.html  struct.OnceCell.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockReadGuardArc.html  struct.RwLockUpgradableReadGuard.html  struct.RwLockUpgradableReadGuardArc.html  struct.RwLockWriteGuard.html  struct.RwLockWriteGuardArc.html  struct.Semaphore.html  struct.SemaphoreGuard.html  struct.SemaphoreGuardArc.html
docs/doc/async_task/: fn.spawn.html  fn.spawn_local.html  fn.spawn_unchecked.html  index.html  struct.Builder.html  struct.Runnable.html
docs/doc/async_trait/: attr.async_trait.html  index.html
docs/doc/atk/: all.html  enum.CoordType.html  enum.Layer.html  enum.RelationType.html  enum.Role.html  enum.StateType.html  enum.TextAttribute.html  enum.TextBoundary.html  enum.TextClipType.html  enum.TextGranularity.html  enum.ValueType.html  index.html  struct.Action.html  struct.Attribute.html  struct.Component.html  struct.Document.html  struct.EditableText.html  struct.GObjectAccessible.html  struct.Hyperlink.html  struct.HyperlinkImpl.html  struct.HyperlinkStateFlags.html  struct.Hypertext.html  struct.Image.html  struct.Misc.html  struct.NoOpObject.html  struct.NoOpObjectFactory.html  struct.Object.html  struct.ObjectFactory.html  struct.Plug.html  struct.Range.html  struct.Rectangle.html  struct.Registry.html  struct.Relation.html  struct.RelationSet.html  struct.Selection.html  struct.Socket.html  struct.StateSet.html  struct.StreamableContent.html  struct.Table.html  struct.TableCell.html  (+8 more)
docs/doc/atk_sys/: all.html  constant.ATK_HYPERLINK_IS_INLINE.html  constant.ATK_KEY_EVENT_LAST_DEFINED.html  constant.ATK_KEY_EVENT_PRESS.html  constant.ATK_KEY_EVENT_RELEASE.html  constant.ATK_LAYER_BACKGROUND.html  constant.ATK_LAYER_CANVAS.html  constant.ATK_LAYER_INVALID.html  constant.ATK_LAYER_MDI.html  constant.ATK_LAYER_OVERLAY.html  constant.ATK_LAYER_POPUP.html  constant.ATK_LAYER_WIDGET.html  constant.ATK_LAYER_WINDOW.html  constant.ATK_RELATION_CONTROLLED_BY.html  constant.ATK_RELATION_CONTROLLER_FOR.html  constant.ATK_RELATION_DESCRIBED_BY.html  constant.ATK_RELATION_DESCRIPTION_FOR.html  constant.ATK_RELATION_DETAILS.html  constant.ATK_RELATION_DETAILS_FOR.html  constant.ATK_RELATION_EMBEDDED_BY.html  constant.ATK_RELATION_EMBEDS.html  constant.ATK_RELATION_ERROR_FOR.html  constant.ATK_RELATION_ERROR_MESSAGE.html  constant.ATK_RELATION_FLOWS_FROM.html  constant.ATK_RELATION_FLOWS_TO.html  constant.ATK_RELATION_LABELLED_BY.html  constant.ATK_RELATION_LABEL_FOR.html  constant.ATK_RELATION_LAST_DEFINED.html  constant.ATK_RELATION_MEMBER_OF.html  constant.ATK_RELATION_NODE_CHILD_OF.html  constant.ATK_RELATION_NODE_PARENT_OF.html  constant.ATK_RELATION_NULL.html  constant.ATK_RELATION_PARENT_WINDOW_OF.html  constant.ATK_RELATION_POPUP_FOR.html  constant.ATK_RELATION_SUBWINDOW_OF.html  constant.ATK_ROLE_ACCEL_LABEL.html  constant.ATK_ROLE_ALERT.html  constant.ATK_ROLE_ANIMATION.html  constant.ATK_ROLE_APPLICATION.html  constant.ATK_ROLE_ARROW.html  (+612 more)
esmeralda_exportados/: Dezembro.csv  Exemplo.csv  Exemplo.html  Exemplo_nadia.csv  teste.csv  texto.csv
log/: log.txt
src/: main.rs  prelude.rs
src/APIs/: mailjet.rs  mod.rs  routes.rs  yahoo_finance.rs
src/Controller/: UserController.rs  calc_controller.rs  data_controller.rs  file_controller.rs  mod.rs  people_controller.rs  user_controller.rs  view_controller.rs
src/Model/: App.rs  Count.rs  Database.rs  Debtor.rs  Info.rs  Investiment.rs  List.rs  Message.rs  People.rs  User.rs  errors.rs  list.rs  mod.rs
src/Segurance/: mod.rs
src/Utils/: mod.rs
src/Utils/manager_db/: Cargo.toml
src/Utils/manager_db/src/: backup.rs  comands.rs  create.rs  delete.rs  main.rs  restore.rs  update.rs
src/Utils/manager_db/src/versions/: mod.rs  v1_2_3.rs  v1_3_0.rs
src/Views/: app.rs  home.rs  login.rs  mod.rs  register.rs  restore.rs
src/controller/: config.rs  construct_db.sql  control.rs  controller.rs  crypt.rs  db.rs  export.rs  filter.rs  login.rs  router.rs
src/model/: app.rs  errors.rs  structs.rs  structs_db.rs
src/view/: app.rs  head.rs  home.rs  login.rs  register.rs  styles.rs
tests/: test-alphabetic.rs  test-control.rs  test-cryptography.rs  test-export.rs  test-valid_email.rs
(+68069 files in other folders)
