[package]
name = "esmeralda"
version = "0.1.6"
edition = "2021"
description = "The purpose of the Emerald is to help control spending and money, knowing where the money goes, how much can be spent, who made the debt and the total of that debt."

[package.metadata.bundle]
name = "Esmeralda"
identifier = "github.com/edulmoraes/esmeralda"
version = "0.1.6"
category = "Finance"
short_description = "More control of your debs"
long_description = """
The Esmeralda app is a free software, if you has dificulty to control your debs, you can use he to help you.
Its easy use and hight perfomance.
"""


[package.metadata.deb]
name = "esmeralda"
maintainer = "Eduardo Moraes <17eduardo05@gmail.com"
extended-description = "The purpose of the Emerald is to help control spending and money, knowing where the money goes, how much can be spent, who made the debt and the total of that debt."
license-file = "./LICENSE"
depends = "postgresql"
copyright = "Copyright (c) 2024 Eduardo Moraes <17eduardo05@gmail.com>"

[package.metadata.rpm]
name = "esmeralda"
vendor = "Eduardo Moraes <17eduardo05@gmail.com"
description = "The purpose of the Emerald is to help control spending and money, knowing where the money goes, how much can be spent, who made the debt and the total of that debt."
license = "GNU AFFERO GENERAL PUBLIC LICENSE Version 3"
version = "0.1.6"
edition = "2023"
group = "Utilities"

[dependencies]
chrono = "0.4.31"
deadpool-postgres = "0.12.0"
diacritics = "0.2.0"
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-html = "0.4.3"
dioxus-router = "0.4.3"
lazy_static = "1.4.0"
nfd = "0.0.4"
postgres = "0.19.7"
printpdf = "0.7.0"
rand = "0.8.5"
regex = "1.10.2"
rust-crypto = "0.2.36"
thiserror = "1.0.50"
tokio = "1.34.0"
serde = {version = "1.0.193", features = ["derive"]}
logger = {git = "https://github.com/EduLMoraes/logger" }
async-trait = "0.1.77"

