[package]
name = "esmeralda"
version = "1.0.0"
edition = "2021"
description = "The purpose of the Emerald is to help control spending and money, knowing where the money goes, how much can be spent, who made the debt and the total of that debt."
resolver = "2"

[package.metadata.bundle]
name = "Esmeralda"
identifier = "github.com/edulmoraes/esmeralda"
version = "1.0.0"
category = "Finance"
short_description = "More control of your debs"
long_description = """
The Esmeralda app is a free software, if you has dificulty to control your debs, you can use he to help you.
Its easy use and hight perfomance.
"""

[package.metadata.deb]
name = "esmeralda"
maintainer = "Eduardo Moraes <17eduardo05@gmail.com"
extended-description = "The purpose of the Emerald is to help control spending and money, knowing where the money goes, how much can be spent, who made the debt and the total of that debt."
license-file = "./LICENSE"
depends = "postgresql"
copyright = "Copyright (c) 2024 Eduardo Moraes <17eduardo05@gmail.com>"

[package.metadata.rpm]
name = "esmeralda"
vendor = "Eduardo Moraes <17eduardo05@gmail.com"
description = "The purpose of the Emerald is to help control spending and money, knowing where the money goes, how much can be spent, who made the debt and the total of that debt."
license = "GNU AFFERO GENERAL PUBLIC LICENSE Version 3"
version = "1.0.0"
edition = "2023"
group = "Utilities"

[dependencies]
chrono = "0.4.31"
diacritics = "0.2.0"
glib = {package = "glib", version = "0.19.4", optional = true }
gtk = { package = "gtk4", version = "0.8.1", features = ["v4_12"], optional = true }
lazy_static = "1.4.0"
libc = "0.2.153"
logger = { git = "https://github.com/EduLMoraes/logger" }
mailjet-rs = "0.3.0"
nfd = {version = "0.0.4", optional = true}
printpdf = "0.7.0"
rand = "0.8.5"
regex = "1.10.2"
rusqlite = "0.31.0"
rust-crypto = "0.2.36"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tokio = { features = ["full"], version = "1.34.0" }
