[package]
name = "esmeralda"
version = "1.2.3"
edition = "2021"
description = "The purpose of the Emerald is to help control spending and money, knowing where the money goes, how much can be spent, who made the debt and the total of that debt."
resolver = "2"
license = "GNU"

[package.metadata.bundle]
name = "esmeralda"
identifier = "io.github.edulmoraes.esmeralda"
icon = ["src/Views/assets/icon/icon.ico"]
resources = ["src/Views/assets", "src/Views/styles"]
license="GNU"
category = "Finance"
long_description = """
The Esmeralda app is a free software, if you has dificulty to control your debs, you can use he to help you.
Its easy use and hight perfomance.
"""

[package.metadata.bundle.windows]
resources = ["src/Views/assets", "src/Views/styles", "C:/msys2/mingw64/lib/pkg_config"]
windows_use_terminal = "false"

[dependencies]
charts-rs = "0.3.8"
chrono = "0.4.31"
diacritics = "0.2.0"
glib = "0.20.0"
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
lazy_static = "1.4.0"
libc = "0.2.153"
logger = { git = "https://github.com/EduLMoraes/logger" }
mailjet-rs = "0.3.0"
printpdf = "0.7.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.12.4"
rfd = "0.14.1"
rusqlite = {version = "0.32.1", features = ["bundled"]}
rust-crypto = "0.2.36"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tokio = { features = ["full"], version = "1.34.0" }
zip = "2.1.0"
